<resources>
    <string name="app_name">RopApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_closet">Armario</string>
    <string name="title_calendar">Calendario</string>
    <string name="title_user">Perfil</string>
    <string name="additemtitle">Añadir Item</string>
    <string name="additemdesc">Selecciona que item deseas añadir</string>
    <string name="additem_action_1">Añadir Prenda</string>
    <string name="additem_action_2">Añadir Conjunto</string>
    <string name="valorGaleria">Galería</string>
    <string name="valorCamara">Cámara</string>
    <string name="valorAddClothes">Añadir Prenda</string>
    <string name="plus">+</string>
    <string name="usuario">\@Usuario</string>

    <string name="facebook_app_id">1539004846661058</string>
    <string name="fb_login_protocol_scheme">fb1539004846661058</string>
    <string name="facebook_client_token">54259a471de5bfd3b437918c6421ad02</string>
    <string name="weather_key">704f6e60299aa4605accec614d63a67b</string>
    <string name="database_url">https://ropapp-743fd-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="storage_url">gs://ropapp-743fd.appspot.com</string>
    <string name="facebookProvider">facebook.com</string>
    <string name="googleProvider">google.com</string>
    <string name="googleServerClientID">381231263922-i3ip3jbcdmn641h4uvde1gbrg7noue5m.apps.googleusercontent.com</string>

    <string name="valorEstaciones">Estaciones</string>
    <string name="spring">Primavera</string>
    <string name="summer">Verano</string>
    <string name="autumn">Otoño</string>
    <string name="winter">Invierno</string>

    <string name="guardar">Guardar</string>
    <string name="remove">Quitar</string>

    <string name="selectCategories">Selecciona las categorias de tu prenda:</string>
    <string name="prendaTop">Parte de Arriba</string>
    <string name="prendaOuterwear">Prenda Exterior</string>
    <string name="prendaBottom">Parte de Abajo</string>
    <string name="prendaShoes">Calzado</string>
    <string name="prendaAccessories">Accesorios</string>
    <string name="prendaDress">Vestido</string>
    <string name="prendaBag">Bolso</string>
    <string name="prendaHat">Sombrero</string>
    <string name="prendaSocks">Calcetines</string>
    <string name="prendaBelts">Cinturon</string>
    <string name="prendaScarf">Bufanda</string>
    <string name="prendaGloves">Guantes</string>
    <string name="prendaGlasses">Gafas</string>
    <string name="prendaWatch">Reloj</string>

    <string name="selectStyles">Selecciona los estilos de tu prenda:</string>
    <string name="styleSportWear">Deportiva</string>
    <string name="styleFormalWear">Formal</string>
    <string name="styleLoungeWear">Andar por Casa</string>
    <string name="styleClassic">Atemporal</string>
    <string name="styleStreetwear">De Calle</string>
    <string name="styleParty">De Fiesta</string>
    <string name="styleMinimalist">Minimalista</string>
    <string name="styleVintage">Vintage</string>
    <string name="styleBohemian">Bohemia</string>
    <string name="styleGlamorous">Glamurosa</string>
    <string name="styleRomantic">Romantica</string>
    <string name="styleEclectic">Ecléctica</string>

    <string name="valorCategorias">Categorías</string>
    <string name="seleccionaCategorias">Selecciona las categorías</string>
    <string name="valorEstilos">Estilos</string>
    <string name="seleccionaEstilos">Selecciona los estilos</string>
    <string name="valorDetalles">Detalles</string>
    <string name="editarDetalles">Edita los detalles</string>

    <string name="botonFlechaNext"><![CDATA[>]]></string>
    <string name="valuePlus">+</string>

    <string name="valorNombreConjunto">Nombre del conjunto</string>
    <string name="ValorIntroduceNuevoPassword">Introduce tu nueva contraseña</string>
    <string name="valorIntroducePassword">Introduce tu contraseña</string>

    <string name="ValorCambiarContraseña">Cambiar Contraseña</string>
    <string name="valorPrendas">Prendas</string>
    <string name="valorConjuntos">Conjuntos</string>
    <string name="valorRecomendacionDia">Recomendación del día</string>
    <string name="valorLocation">Localizacion</string>
    <string name="valorEstadisticas">Estadísticas</string>
    <string name="valorInfoCuenta">Información Cuenta</string>
    <string name="valorConfiguracion">Configuración</string>
    <string name="valorSignOut">Cerrar Sesion</string>
    <string name="valorInformacionFigura">Información Figura</string>
    <string name="valorContinuar">Continuar</string>
    <string name="valorFechaNac">Fecha de Nacimiento</string>
    <string name="valorCompletarDatos">Completa los datos</string>
    <string name="valorClosetName">Armario Principal</string>
    <string name="valorUserEmail">Email del usuario</string>
    <string name="valorPassword">Contraseña</string>
    <string name="valorSignIn">Iniciar sesion</string>
    <string name="valorCreateAccount">Crear Cuenta</string>
    <string name="valorOr">OR</string>
    <string name="valorLoginGoogle">Inicia sesión con google</string>
    <string name="valorEdit">Editar</string>
    <string name="valorShare">Compartir</string>
    <string name="valorAddCalendar">Añadir al calendario</string>
    <string name="elegirPrenda">Elegir %s</string>
    <string name="valorOldPassword">Contraseña vieja</string>
    <string name="valorNewPassword">Nueva contraseña</string>
    <string name="valorMarca">Marca</string>
    <string name="valorEstado">Estado</string>
    <string name="valorPrecio">Precio</string>
    <string name="valorColores">Colores</string>
    <string name="valorOutfitName">Conjunto moderno</string>
    <string name="valorConjuntoCalendario">Conjunto del día:</string>
    <string name="valorSinRecomendacion">Sin recomendaciones</string>
    <string name="valorCityNotFound">Ciudad no encontrada</string>
    <string name="valorNoClothes">No hay ropa…</string>


    <!-- Definición de valores de Dropdown de Género en la vista de crear cuenta -->
    <string-array name="genero_options">
        <!-- Este será el marcador de posición -->
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otros</item>
    </string-array>

    <string-array name="estado_options">
         <!-- Este será el marcador de posición -->
        <item>Nuevo</item>
        <item>Usado</item>
        <item>Como nuevo</item>
        <item>Vintage</item>
        <item>Desgastado</item>
        <item>Dañado</item>
        <item>Restaurado</item>
        <item>Personalizado</item>
        <item>Vintage repro</item>
        <item>Outlet</item>
    </string-array>

    <string-array name="tamano_options">
        <!-- Este será el marcador de posición -->
        <item>XS</item>
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
        <item>XXL</item>
        <item>XXXL</item>

    </string-array>


</resources>
