<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.apm.ropapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.apm.ropapp.ui.closet.ClosetFragment"
        android:label="Closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.apm.ropapp.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.apm.ropapp.ui.profile.ProfileFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_profile" />

</navigation>