<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="52dp"
        android:text="@string/prendaBottom"
        app:layout_constraintBottom_toBottomOf="@+id/bottom_button"
        app:layout_constraintEnd_toStartOf="@+id/bottom_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prendaAccessories"
        app:layout_constraintBottom_toBottomOf="@+id/accesorio_button"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/accesorio_button"
        app:layout_constraintVertical_bias="0.519" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/prendaShoes"
        app:layout_constraintBottom_toBottomOf="@+id/shoes_button"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/shoes_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="300dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/top_button"
        app:srcCompat="@drawable/nike" />

    <Button
        android:id="@+id/accesorio_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="39dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/top_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_button" />

    <ImageButton
        android:id="@+id/top_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/shoes_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tshirt" />

    <Button
        android:id="@+id/bottom_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="@+id/accesorio_button"
        app:layout_constraintTop_toTopOf="@+id/shoes_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/prendaTop"
        app:layout_constraintStart_toEndOf="@+id/top_button"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/outfit_name"
        android:layout_width="236dp"
        android:layout_height="62dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/valorNombreConjunto"
        app:layout_constraintBottom_toTopOf="@+id/accesorio_button"
        app:layout_constraintEnd_toEndOf="@+id/accesorio_button" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="228dp"
        android:layout_height="91dp"
        android:layout_marginBottom="104dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/shoes_button"
        app:layout_constraintStart_toStartOf="@+id/bottom_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="65dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="center"
        app:fabSize="auto"
        app:layout_constraintEnd_toStartOf="@+id/outfit_name"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>