<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text="@string/valor_elegir_prenda"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/floatingBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/prendaTop"
                app:chipBackgroundColor="@color/chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipOuterwear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/prendaOuterwear"
                app:chipBackgroundColor="@color/chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/prendaBottom"
                app:chipBackgroundColor="@color/chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipShoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/prendaShoes"
                app:chipBackgroundColor="@color/chip_state_list" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipAccessories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/prendaAccessories"
                app:chipBackgroundColor="@color/chip_state_list" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="150dp" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>